apps/shared-infra/base/ingress-nginx-alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-alb
  namespace: ingress-nginx
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
    # Add certificate ARN if you want HTTPS listener: alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:...
    # external-dns.alpha.kubernetes.io/hostname: ocr-eks.purpleray.com,liveness.internal-services
spec:
  ingressClassName: alb
  rules:
  - host: ocr-eks.purpleray.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ingress-nginx-controller
            port:
              number: 80
  - host: liveness.internal-services
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ingress-nginx-controller
            port:
              number: 80
